fixing nav and header spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -29,27 +29,24 @@ img {
 	display: none;
 }
 nav {
-	text-align: center;
-	margin-bottom: 1em;
+
+	background-color: white;
 }
 nav ul {
 	padding: 0;
 
 }
+
 nav a {
 	text-decoration: none;
 	color: black;
-	padding-bottom: 1em;
-}
+	margin-left: .5em;	
+	}
 
 
-
-.heading {
+.center-header {
 	text-align: center;
 	background-color: #ccc;
-	padding: 1.5em;
-}
-.banner {
 
 }
 .banner-text {
@@ -62,38 +59,56 @@ nav a {
 	border-bottom: solid 1px black;
 	border-top: solid 1px black;
 }
-.col-red {
-	border-bottom: solid 1px red;
+
+nav a {
+	margin: 0;
 }
-.col-blue {
-	border-bottom: solid 1px blue;
+
+nav li{
+	padding-right: .5em;
 }
-.col-yellow {
-	border-bottom: solid 1px yellow;
-}
-.col-orange {
-	border-bottom: solid 1px orange;
-}
+
 .col-red a {
 	color: red;
+	border-bottom: solid 1px red;
+	display: flex;
+	
+	padding: .5em;
 }
 .col-blue a{
 	color: blue;
+	border-bottom: solid 1px blue;
+
+	display: flex;
+	padding: .5em;
+	
 }
 .col-yellow a{
 	color: yellow;
+	border-bottom: solid 1px yellow;
+	
+	display: flex;
+	padding: .5em;
+
 }
 .col-orange a{
 	color: orange;
+	border-bottom: solid 1px orange;
+	
+	display: flex;
+	padding: .5em;
 }
 
 .margin-space {
 	margin: 1em;
 }
 
-.article {
-	margin: 1em;
+.article div {
+	padding-right: 1em;
+	padding-left: 1em;
 } 
+
+
 
 @media only screen and (min-width: 25em) {
 }
@@ -105,8 +120,12 @@ nav a {
 
 @media only screen and (min-width: 60em) {
 	.long-nav { 
-	display: inline-block 
+	display: inline-block;
+}
 
+	nav {
+	padding-left: 20%;
+}
 }
 
 
